tests/regression/errors/basic/syntax_error_23.csd
// Syntax error test 23 - missing semicolon
sus x drip = 23
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
